# AI-Driven-Trading

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHECKLIST.md  CONFIG_PRIORITY.md  CONTEXT.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  INSTALL_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_INSTALL.md  README.md  README_STARTUP.md  UV.md  docker-compose.yml  env.template  env.testnet.example  index.html  main.py  pyproject.toml  quickstart.sh  requirements.txt  run.sh  start_monitor.sh  supervisord.conf  test_system.py  test_thinking_extraction.py  test_thinking_simple.py  view_ai_response.sh  web_monitor.py  web_server.py
config/: risk_params.yaml  trading_config.yaml
docs/: MONITOR_QUICKSTART.md  README.md  REASONING_MODELS.md  TESTNET_SETUP.md  THIRD_PARTY_API.md  TRADING_LOGIC.md
docs/CHANGELOG/: IMPROVEMENTS_2025-10-21.md
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AccountChart.tsx  DecisionsList.tsx  PositionsList.tsx  PriceBar.tsx  TradesList.tsx
frontend/lib/: api.ts  utils.ts
frontend/public/: ads.txt
ref/: ChatOfTheThought.md  UserPrompt.md  conversation.json
scripts/: check_config.py  generate_sample_prompt.py  test_third_party_api.py
src/: __init__.py  config.py  trading_bot.py
src/ai/: __init__.py  decision_models.py  llm_interface.py  (+3 more)
tests/: README.md  __init__.py  diagnose_api.py  test_no_action_format.py  test_prompt_simple.py  test_pydantic_parser.py  test_real_data.py  test_system.py  test_testnet_connection.py
(+38 files in other folders)
